Fix design flaw in selector that caused glitches on concurrent RPC requests